--- a/src/main/webapp/i18n/zh-cn/global.json
+++ b/src/main/webapp/i18n/zh-cn/global.json
@@ -9,6 +9,7 @@
         "main": "数据",
         "pmsKunden": "Pms Kunden",
         "appFunction": "App Function",
+        "pmsBuch": "Pms Buch",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
